# Theog_newsletter

Backend/: .env.example  .gitignore  QUICK_REFERENCE.md  README.md  Scraper.py  app.py  app_basic.py  config.py  dashboard.html  deploy_hf.py  news_sources.py  quick-start.bat  requirements.txt  requirements_hf.txt  setup.bat  setup.py  start.bat  test_api.py  test_basic.py  utils.py
Backend/generated_newsletters/: newsletter_20250802_164320.json  newsletter_20250802_164458.json  newsletter_20250802_164730.json
Backend/infopulse-newsletter/: package-lock.json  package.json
Backend/infopulse-newsletter (1)/: package-lock.json
Backend/infopulse-newsletter (1)/app/: globals.css  layout.tsx  page.tsx  types.ts
Backend/infopulse-newsletter (1)/app/components/: ai-tools-panel.tsx  theme-provider.tsx  three-background.tsx
Backend/infopulse-newsletter/app/: layout.tsx  page.tsx
Backend/infopulse-newsletter/app/category/: [category].tsx  page.tsx
Backend/infopulse-newsletter/app/components/: ai-tools-panel.tsx  category-navbar.tsx  news-article-card.tsx  three-background-wrapper.tsx  three-background.tsx
Backend/infopulse-newsletter/components/: category-newsletter-generator.tsx
Backend/newsagent/: pyproject.toml
Backend/newsagent/src/newsagent/: crew.py  main.py
Backend/newsagent/src/newsagent/config/: agents.yaml  tasks.yaml
Backend/newsagent/src/newsagent/tools/: custom_tool.py
frontent/infopulse-newsletter (2)/: package-lock.json
frontent/infopulse-newsletter (2)/app/: globals.css  page.tsx
(+4 files in other folders)
