[project]
name = "newsagent"
version = "0.1.0"
description = "newsagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0",
    "schedule>=1.2.0",
    "requests>=2.31.0"
]

[project.scripts]
newsagent = "newsagent.main:run"
run_crew = "newsagent.main:run"
train = "newsagent.main:train"
replay = "newsagent.main:replay"
test = "newsagent.main:test"
schedule_news = "newsagent.main:run_scheduler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
